# linux-perf-file-reader

./: Cargo.toml  README.md
examples/: dump.rs
src/: event_reader.rs  header.rs  info_reader.rs  lib.rs  tools.rs
tests/: dump.stdout  dump_test.rs  perf.data
